Prevent wrapping of relations in "Target of" table

--- a/src/app/target-of-annotation-table/target-of-annotation-table.component.css
+++ b/src/app/target-of-annotation-table/target-of-annotation-table.component.css
@@ -1,3 +1,7 @@
 .send-to-query-builder {
   margin: 0.6em 0;
 }
+
+.target-of-rel-name {
+  white-space: nowrap;
+}
